k8s-related/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo-ingress
  # annotatio here for classname and clusterissuer 
  annotations: 
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingressClassName: "nginx"
spec:
  ingressClassName: nginx 
  tls: 
    - hosts: 
      - nginx-node4.devnerd.store
      secretName: nginx-k8s-demo-tls-2
  rules:
  - host: nginx-node4.devnerd.store
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-service
            port: 
              number: 80
